--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loehx's Interval Timer</title>
+    <meta names="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#f5f5f5">
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      window.scrollTo(0, 1);
+    </script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
