--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>
-      window.scrollTo(0, 1);
-    </script>
+    <style>
+      body {
+        position: fixed; 
+        overflow:hidden; 
+        top: 0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%;
+      }
+    </style>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
