--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app"></div>
     <style>
-      body {
+      html, body {
         position: fixed; 
         overflow:hidden; 
         top: 0; 
