--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loehx's Interval Timer</title>
+    <title>N/N Timer</title>
     <meta name="theme-color" content="#f5f5f5" />
     <link
       rel="icon"
