--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>N/N Timer</title>
+    <meta name="description" content="A simple interval timer for your needs" />
+    <meta name="keywords" content="timer, interval, workout, training" />
+    <meta name="author" content="Alexander Löhn" />
+    <meta name="robots" content="index, nofollow" />
+    <meta name="googlebot" content="index, nofollow" />
+    <meta name="google" content="notranslate" />
     <meta name="theme-color" content="#f5f5f5" />
     <link
       rel="icon"
